tests/ui/consts/const_transmute_type_id4.stderr
error[E0080]: invalid `TypeId` value: not all bytes carry type id metadata
  --> $DIR/const_transmute_type_id4.rs:12:13
   |
LL |     assert!(a == b);
   |             ^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `<TypeId as PartialEq>::eq`
  --> $SRC_DIR/core/src/any.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
